<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0   http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.jdmp</groupId>
	<artifactId>jdmp</artifactId>
	<version>0.3.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>Java Data Mining Package</name>
	<url>https://jdmp.org/</url>
	<description>The Java Data Mining Package is a library for data mining and machine learning.</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<rootdir>${basedir}</rootdir>
		<skipTests>true</skipTests>
	</properties>

	<developers>
		<developer>
			<id>arndt</id>
			<name>Holger Arndt</name>
			<email>mail@holger-arndt.com</email>
			<url>https://holger-arndt.com/</url>
			<roles>
				<role>Project Manager</role>
			</roles>
		</developer>
	</developers>

	<organization>
		<name>Java Data Mining Package</name>
		<url>https://jdmp.org/</url>
	</organization>

	<licenses>
		<license>
			<name>GNU LESSER GENERAL PUBLIC LICENSE</name>
			<url>http://www.gnu.org/licenses/lgpl-3.0</url>
		</license>
	</licenses>

    <scm>
        <url>https://github.com/jdmp/java-data-mining-package</url>
        <connection>scm:git:git://github.com/jdmp/java-data-mining-package.git</connection>
        <developerConnection>scm:git:git@github.com:jdmp/java-data-mining-package.git</developerConnection>
    </scm>

    <issueManagement>
        <url>https://github.com/jdmp/java-data-mining-package/issues</url>
        <system>GitHub Issues</system>
    </issueManagement>

	<modules>
		<module>../jdmp-bsh</module>
		<module>../jdmp-complete</module>
		<module>../jdmp-core</module>
        <module>../jdmp-corenlp</module>
        <module>../jdmp-examples</module>
        <module>../jdmp-gui</module>
        <module>../jdmp-jetty</module>
        <module>../jdmp-liblinear</module>
        <module>../jdmp-libsvm</module>
        <module>../jdmp-lucene</module>
        <module>../jdmp-mallet</module>
		<module>../jdmp-weka</module>
	</modules>

	<profiles>
		<profile>
			<id>jdmp</id>
			<properties>
				<skipJavadoc>true</skipJavadoc>
			</properties>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<distributionManagement>
				<site>
					<id>jdmp.org</id>
					<url>scp://jdmp.org/var/www/jdmp.org/0.3.1-SNAPSHOT/jdmp/</url>
				</site>
			</distributionManagement>
		</profile>
		<profile>
			<id>ossrh</id>
			<distributionManagement>
				<snapshotRepository>
					<id>ossrh</id>
					<url>https://oss.sonatype.org/content/repositories/snapshots</url>
				</snapshotRepository>
				<repository>
					<id>ossrh</id>
					<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
				</repository>
			</distributionManagement>
			<build>
				<plugins>
					<!-- create javadoc -->
					<plugin>
						<inherited>true</inherited>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>2.10.3</version>
						<configuration>

                            <!-- collect all files in one directory, seems to take longer -->
                            <!-- Creating fake javadoc directory to prevent repeated invocations when enabled -->
                            <!-- <outputDirectory>${rootdir}/target/apidocs/${project.name}</outputDirectory>
                            <reportOutputDirectory>${rootdir}/target/apidocs/${project.name}</reportOutputDirectory> -->

                            <!-- include source code in javadoc, seems to take longer if enabled -->
                            <linksource>false</linksource>

                            <!-- helps to speed things up -->
                            <maxmemory>2g</maxmemory>

                            <!-- set this to true to fix the OutOfMemoryException in Java 8 for Windows -->
                            <noindex>false</noindex>

                            <!-- it takes very long when set to false -->
                            <notree>false</notree>

                            <!-- not sure what this does -->
                            <failOnError>false</failOnError>

                            <!-- other possible settings, don't seem to be necessary -->
                            <!-- <notree>true</notree> -->
                            <!-- <additionalJOptions> -->
                            <!--   <additionalJOption>-J-Xss512M</additionalJOption> -->
                            <!--   <additionalJOption>-J-XX:MaxPermSize=512M</additionalJOption> -->
                            <!-- </additionalJOptions> -->

							<header><![CDATA[
						<script async
							src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
						<ins class="adsbygoogle" style="display:inline-block;width:320px;height:50px"
							data-ad-client="ca-pub-1238159289842092" data-ad-slot="8359296562"></ins>
						<script>
							(adsbygoogle = window.adsbygoogle || []).push({});
						</script>
					]]></header>

							<footer><![CDATA[
						<script type="text/javascript">
                           var _paq = _paq || [];
                           _paq.push(["trackPageView"]);
                           _paq.push(["enableLinkTracking"]);
                           (function () {
                             var u = (("https:" == document.location.protocol) ? "https" : "http") + "://jdmp.org/tracking/";
                             _paq.push(["setTrackerUrl", u + "piwik.php"]);
                             _paq.push(["setSiteId", "3"]);
                             var d = document, g = d.createElement("script"), s = d.getElementsByTagName("script")[0];
                             g.type = "text/javascript";
                             g.defer = true;
                             g.async = true;
                             g.src = u + "piwik.js";
                             s.parentNode.insertBefore(g, s);
                           })();
                         </script>
                         <noscript>
                           <img src="//jdmp.org/tracking/piwik.php?idsite=3&amp;rec=1" style="border:0" alt=""/>
                         </noscript>
					]]></footer>


							<links>
								<link>https://jdmp.org/${project.version}/jdmp-bsh/apidocs</link>
								<link>https://jdmp.org/${project.version}/jdmp-complete/apidocs</link>
								<link>https://jdmp.org/${project.version}/jdmp-core/apidocs</link>
                                <link>https://jdmp.org/${project.version}/jdmp-corenlp/apidocs</link>
                                <link>https://jdmp.org/${project.version}/jdmp-examples/apidocs</link>
                                <link>https://jdmp.org/${project.version}/jdmp-gui/apidocs</link>
                                <link>https://jdmp.org/${project.version}/jdmp-jetty/apidocs</link>
                                <link>https://jdmp.org/${project.version}/jdmp-liblinear/apidocs</link>
                                <link>https://jdmp.org/${project.version}/jdmp-libsvm/apidocs</link>
                                <link>https://jdmp.org/${project.version}/jdmp-lucene/apidocs</link>
                                <link>https://jdmp.org/${project.version}/jdmp-mallet/apidocs</link>
								<link>https://jdmp.org/${project.version}/jdmp-weka/apidocs</link>

								<link>https://ujmp.org/${project.version}/ujmp-colt/apidocs</link>
								<link>https://ujmp.org/${project.version}/ujmp-commonsmath/apidocs</link>
								<link>https://ujmp.org/${project.version}/ujmp-complete/apidocs</link>
								<link>https://ujmp.org/${project.version}/ujmp-core/apidocs</link>
								<link>https://ujmp.org/${project.version}/ujmp-ehcache/apidocs</link>
								<link>https://ujmp.org/${project.version}/ujmp-ejml/apidocs</link>
								<link>https://ujmp.org/${project.version}/ujmp-elasticsearch/apidocs</link>
								<link>https://ujmp.org/${project.version}/ujmp-examples/apidocs</link>
								<link>https://ujmp.org/${project.version}/ujmp-gui/apidocs</link>
								<link>https://ujmp.org/${project.version}/ujmp-hadoop/apidocs</link>
								<link>https://ujmp.org/${project.version}/ujmp-itext/apidocs</link>
								<link>https://ujmp.org/${project.version}/ujmp-jackcess/apidocs</link>
								<link>https://ujmp.org/${project.version}/ujmp-jama/apidocs</link>
								<link>https://ujmp.org/${project.version}/ujmp-jblas/apidocs</link>
								<link>https://ujmp.org/${project.version}/ujmp-jdbc/apidocs</link>
								<link>https://ujmp.org/${project.version}/ujmp-jetty/apidocs</link>
								<link>https://ujmp.org/${project.version}/ujmp-jfreechart/apidocs</link>
								<link>https://ujmp.org/${project.version}/ujmp-jmatio/apidocs</link>
								<link>https://ujmp.org/${project.version}/ujmp-jsch/apidocs</link>
								<link>https://ujmp.org/${project.version}/ujmp-jsci/apidocs</link>
								<link>https://ujmp.org/${project.version}/ujmp-jscience/apidocs</link>
								<link>https://ujmp.org/${project.version}/ujmp-jung/apidocs</link>
								<link>https://ujmp.org/${project.version}/ujmp-la4j/apidocs</link>
								<link>https://ujmp.org/${project.version}/ujmp-lucene/apidocs</link>
								<link>https://ujmp.org/${project.version}/ujmp-mail/apidocs</link>
								<link>https://ujmp.org/${project.version}/ujmp-mtj/apidocs</link>
								<link>https://ujmp.org/${project.version}/ujmp-ojalgo/apidocs</link>
								<link>https://ujmp.org/${project.version}/ujmp-parallelcolt/apidocs</link>
								<link>https://ujmp.org/${project.version}/ujmp-pdfbox/apidocs</link>
								<link>https://ujmp.org/${project.version}/ujmp-poi/apidocs</link>
								<link>https://ujmp.org/${project.version}/ujmp-vecmath/apidocs</link>
							</links>

						</configuration>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<build>

		<!-- copy license files to META-INF -->
		<resources>
			<resource>
				<targetPath>META-INF</targetPath>
				<filtering>false</filtering>
				<directory>${basedir}/META-INF</directory>
				<includes>
					<include>**</include>
				</includes>
			</resource>
		</resources>

		<plugins>

			<!-- be able to skip tests -->
			<plugin>
				<inherited>true</inherited>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.18.1</version>
				<configuration>
					<skipTests>${skipTests}</skipTests>
				</configuration>
			</plugin>

			<!-- set compile level -->
			<plugin>
				<inherited>true</inherited>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>1.5</source>
					<target>1.5</target>
				</configuration>
			</plugin>

			<!-- needed for creating project site -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.4</version>
				<configuration>
					<templateFile>${rootdir}/default-site.vm</templateFile>
				</configuration>
				<dependencies>
					<!-- for scp protocol -->
					<dependency>
						<groupId>org.apache.maven.wagon</groupId>
						<artifactId>wagon-ssh</artifactId>
						<version>2.0</version>
					</dependency>
				</dependencies>
			</plugin>

			<!-- needed for site plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>2.8</version>
			</plugin>

			<!-- create sources jar files -->
			<plugin>
				<inherited>true</inherited>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.4</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- sign jar files -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>1.6</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- release to maven central -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.5.2</version>
				<configuration>
					<autoVersionSubmodules>true</autoVersionSubmodules>
					<useReleaseProfile>false</useReleaseProfile>
					<releaseProfiles>release</releaseProfiles>
					<goals>deploy</goals>
				</configuration>
			</plugin>

			<!-- create jar files -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<archive>
						<manifest>
							<!-- set main class -->
							<mainClass>org.jdmp.core.JDMP</mainClass>

							<!-- lists the dependency jar files in the class path -->
							<addClasspath>true</addClasspath>
						</manifest>
						<manifestEntries>
							<!-- add link to manifest -->
							<url>https://jdmp.org/</url>
						</manifestEntries>
					</archive>
				</configuration>

				<!-- needed to create test-jar -->
				<executions>
					<execution>
						<goals>
							<goal>test-jar</goal>
						</goals>
					</execution>
				</executions>

			</plugin>

			<!-- assemble all files into single jar -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.5.5</version>
				<configuration>
					<outputDirectory>${rootdir}/target</outputDirectory>
					<descriptors>
						<descriptor>src/assemble/complete.xml</descriptor>
						<descriptor>src/assemble/sources.xml</descriptor>
						<descriptor>src/assemble/with-deps.xml</descriptor>
						<descriptor>src/assemble/deps.xml</descriptor>
						<descriptor>src/assemble/libs.xml</descriptor>
					</descriptors>
					<archive>
						<manifest>
							<mainClass>org.jdmp.gui.JDMP</mainClass>
							<addClasspath>true</addClasspath>
						</manifest>
						<manifestEntries>
							<url>https://jdmp.org/</url>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>

		</plugins>


	</build>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.11</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

</project>